refactor: Melhorias na manipulação de exceções e ajustes na configuração do Jacoco